[gd_scene load_steps=10 format=3 uid="uid://nvt00bg5xc4l"]

[ext_resource type="Script" uid="uid://isudkhfb6sfj" path="res://level_ui/ui.gd" id="1_j06nf"]
[ext_resource type="PackedScene" uid="uid://c8oj4lpr53fb3" path="res://level_ui/lives.tscn" id="3_gucvr"]
[ext_resource type="PackedScene" uid="uid://dpfpjghkspelg" path="res://shop/shop_ui.tscn" id="3_shop"]
[ext_resource type="Theme" uid="uid://lodk0caldpdi" path="res://ui_theme.tres" id="4_theme"]
[ext_resource type="PackedScene" path="res://level_ui/cash.tscn" id="4_u6orx"]
[ext_resource type="Script" uid="uid://dtktsmbm8hok" path="res://level_ui/upgrade_selection.gd" id="4_upgrade"]
[ext_resource type="Script" uid="uid://dj7mubnnbexrg" path="res://show_sequence/level_counter.gd" id="5_level"]
[ext_resource type="Texture2D" uid="uid://dmqtj4q7725in" path="res://level_ui/assets/panel_glass_notches_bottom.png" id="7_ktlth"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8adj0"]
texture = ExtResource("7_ktlth")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("4_theme")
script = ExtResource("1_j06nf")

[node name="Lives" parent="." instance=ExtResource("3_gucvr")]
layout_mode = 0
offset_right = 241.0

[node name="Cash" parent="." instance=ExtResource("4_u6orx")]
layout_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_right = 128.0
offset_bottom = 129.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8adj0")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(156, 64)
layout_mode = 2
alignment = 1

[node name="Level" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 48
text = "Level 0"
horizontal_alignment = 1
script = ExtResource("5_level")

[node name="Progress" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="FastForwardButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -158.0
offset_top = 517.0
offset_right = -108.0
offset_bottom = 572.0
grow_horizontal = 0
text = "FF OFF"

[node name="TryAgainButton" type="Button" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 200.0
offset_right = 75.0
offset_bottom = 240.0
text = "Try Again"

[node name="UpgradesContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 102.0
offset_right = -10.0
offset_bottom = 142.0
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="MiniWinContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -106.0
offset_right = 100.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="MiniWinLabel" type="Label" parent="MiniWinContainer"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Perfect!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Overlay" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="Panel" type="Panel" parent="Overlay"]
custom_minimum_size = Vector2(400, 180)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Overlay/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "YOU ARE A LOOOOOSER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="Overlay/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="Overlay/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopButton" type="Button" parent="Overlay/Panel/VBoxContainer"]
layout_mode = 2
text = "Go to Shop"

[node name="RestartButtonContainer" type="CenterContainer" parent="Overlay/Panel/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="Overlay/Panel/VBoxContainer/RestartButtonContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Restart"

[node name="UpgradeSelection" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("4_upgrade")

[node name="Panel" type="Panel" parent="UpgradeSelection"]
custom_minimum_size = Vector2(635, 450)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UpgradeSelection/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeSelection/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Choose an Upgrade"
horizontal_alignment = 1

[node name="UpgradeCards" type="HBoxContainer" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Card1" type="Panel" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card1/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Extra Life"
horizontal_alignment = 1

[node name="Description" type="Label" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card1/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Gain an additional life for this run"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Price" type="Label" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card1/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "50 coins"
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card1/VBoxContainer"]
layout_mode = 2
text = "Select"

[node name="Card2" type="Panel" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Coin Multiplier"
horizontal_alignment = 1

[node name="Description" type="Label" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Double coin rewards for this run"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Price" type="Label" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "30 coins"
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card2/VBoxContainer"]
layout_mode = 2
text = "Select"

[node name="Card3" type="Panel" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Slow Motion"
horizontal_alignment = 1

[node name="Description" type="Label" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Sequences flash more slowly"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Price" type="Label" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "40 coins"
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer/UpgradeCards/Card3/VBoxContainer"]
layout_mode = 2
text = "Select"

[node name="SkipButton" type="Button" parent="UpgradeSelection/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Skip"

[node name="ShopUI" parent="." instance=ExtResource("3_shop")]
visible = false
custom_minimum_size = Vector2(400, 300)
layout_mode = 1

[connection signal="pressed" from="Overlay/Panel/VBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="Overlay/Panel/VBoxContainer/RestartButtonContainer/RestartButton" to="." method="_on_restart_button_pressed"]
